--- a/statistika projekt.tex
+++ b/statistika projekt.tex
@@ -20,7 +20,7 @@
 \begin{document}
 
 \title{Simetrična diskretna verižnica z liho členki\\
-    \large Projekt pri predmetu Matematično modeliranje
+    \large Projekt pri predmetu Statistika
 }
 \author{
     Matej Novoselec\\
@@ -28,6 +28,15 @@
 \date{30.\ junij 2023}
 
 \maketitle
+
+\begin{figure}[H]
+    \begin{center}
+    %\includegraphics[width=320pt]{naloga1a.png}
+    %\caption{Večje število odbojev na diskretni verižnici}
+    \end{center}    
+\end{figure}
+
+
 
 \section{Naloga 2}
 Vredno je zapisati nekoliko bolj matematično interpretacijo problema/navodila. 
@@ -65,7 +74,7 @@ $$
 $$
 Za cenilko po metodi največjega verjetja tako dobimo:
 $$
-\hat{\theta} = \sqrt{\frac{1}{2n}{\sum_{i=1}^{n}{r_i^2}}}~.
+\hat{\theta}_{MNV} = \sqrt{\frac{1}{2n}{\sum_{i=1}^{n}{r_i^2}}}~.
 $$
 Za rešitev podnaloge b) si oglejmo pričakovano vrednost (Rayleighove) slučajne spremenljivke $R$:
 $$
@@ -75,10 +84,42 @@ Uvedemo $\tau = \frac{r^{2}}{2 \theta^{2}}$ in dobimo
 $$
 \EX(R) = \int_{0}^{\infty}{\sqrt{2 \tau}~\theta ~e^{-\tau}~ d \tau} = \theta \sqrt{2}\int_{0}^{\infty}{\tau^{1/2}~e^{-\tau}~ d \tau} = \theta\sqrt{2}~\Gamma(3/2) = \theta \sqrt{\frac{\pi}{2}}.
 $$
-Cenilka po metodi momentov je zato:
+Cenilka po metodi momentov je zato podano s predpisom:
 $$
-\hat{\theta} = \overline{R} \sqrt{\frac{2}{\pi}}~.
+\hat{\theta}_{MM} = \overline{R} \sqrt{\frac{2}{\pi}}.
 $$
+Iz izpeljave cenilke, dobljene po metodi momentov, je jasno vidno, da je cenilka nepristranska (hitro bi lahko tudi direktno preverili, da res velja $\EX(\hat{\theta}_{MM}) = \theta$).
+\newline
+Na podoben način, kot smo to storili zgoraj, se dokopljemo do pomožnega rezultata, ki nam bo prav prišel kasneje. Velja:
+$$
+\EX(R^2) = \int_{0}^{\infty}{r^2~f(r \mid \theta)~dr}= 2 \theta^2.
+$$
+\newline
+\newline
+Sedaj se lotimo reševanja podnaloge c). Ker je cenilka za $\theta$ po metodi momentov nepristranska, velja $MSE(\hat{\theta}_{MM}) = Var(\hat{\theta}_{MM})$. Sedaj varianco tudi poračunajmo.
+\begin{equation*}
+    \begin{split}
+    Var(\hat{\theta}_{MM}) = Var\bigg(\overline{R} \sqrt{\frac{2}{\pi}}\bigg) = \frac{2}{\pi} \frac{Var(R)}{n} = \frac{2}{\pi}\frac{\EX(R^2) - (\EX(R))^2}{n} = \\
+    = \frac{2}{\pi}\bigg(\frac{2 \theta^2 - \big(\frac{\pi}{2} \theta\big)^2}{n}\bigg) = \frac{\theta^2}{n} \bigg(\frac{4 - \pi}{\pi}\bigg)
+    \end{split}
+\end{equation*}
+Po zgornjem komentarju torej
+$$
+MSE(\hat{\theta}_{MM}) = \frac{\theta^2}{n} \bigg(\frac{4 - \pi}{\pi}\bigg)\approx \frac{\theta^2}{n} \cdot 0{,}273.
+$$
+Pri izračunu asimptotične srednje kvadratične napake pri cenilki za $\theta$ po metodi največjega verjetja, nam na pomoč priskoči Fischerjeva informacija. 
+Velja:
+\begin{equation*}
+    \begin{split}
+    FI(\theta) = - \EX\bigg(\frac{\partial^2 l(\theta \mid (r_1,~\dots,~r_n))}{\partial \theta^2}\bigg) = -\EX\bigg(\frac{1}{\theta^4}\bigg(2n\theta^2 - 3 \sum_{i=1}^{n}{r_i^2}\bigg)\bigg) = \\
+    = -\EX\bigg(\frac{1}{\theta^4}\bigg(2n \theta^2 - n \EX(R^2)\bigg)\bigg) = -\EX\bigg(\frac{1}{\theta^4}\bigg(2n \theta^2 - 3n \Big(\frac{\pi}{2} \theta^2 + \frac{4- \pi}{2}\theta^2\Big)\bigg)\bigg) = \frac{4n}{\theta^2}, 
+    \end{split}
+\end{equation*}
+oziroma: 
+$$ 
+    FI^{-1}(\theta) = \frac{1}{4}\frac{\theta^2}{n},~\text{zato asimptotično velja:}~~MSE(\hat{\theta}_{MNV}) \approx \frac{\theta^2}{n} \cdot 0{,}25. 
+$$
+Opazimo, da je faktor pred asimptotično srednje kvadratično napako za cenilko, dobljeno po metodi največjega verjetja nekoliko manjši, zato je vsaj asimptotično cenilka $\hat{\theta}_{MNV}$ nekoliko boljša od cenilke $\hat{\theta}_{MM}$.
 
 
 
