--- a/statistika projekt.tex
+++ b/statistika projekt.tex
@@ -19,7 +19,7 @@
 
 \begin{document}
 
-\title{Simetrična diskretna verižnica z liho členki\\
+\title{Projekt statistika\\
     \large Projekt pri predmetu Statistika
 }
 \author{
@@ -28,6 +28,15 @@
 \date{30.\ junij 2023}
 
 \maketitle
+\pagebreak
+
+\section{Kibergrad}
+Podani so nam podatki o dohodkih $43886$ družin iz mesta Kibergrad. Podatke o dohodkih bomo analizirali v odvisnosti od tipa družin, ki je posredovala podatke. 
+Pri obdelavi podatkov si bomo pomagali z datoteko $statistika\_naloga\_1.py$, ki je namenjena predvsem izrisu grafov, ter numeričnim izračunom željenih vrednosti, prek danih podatkov. 
+\newline
+Družine razdelimo v $3$ tipe: tip 1 - družina z zakonskima ali zunajzakonskima partnerjema, tip 2 - enostarševska družina z očetom, tip 3 - enostarševska družina z materjo.
+Imamo 33403 podatkov od družin tipa 1, 2054 podatkov od družin tipa 2 in 8429 podatkov od družin tipa 3.
+Za vsak tip družine izberemo enostaven slučajen vzorec velikosti $500$ in narišemo pripadajočo škatlo z brki.
 
 \begin{figure}[H]
     \begin{center}
@@ -36,6 +45,18 @@
     \end{center}    
 \end{figure}
 
+Hitro vidimo, da so vrednosti prvega, drugega in tretjega kvantila pri družinah tipa 1 (družinah z zakonskima ali zunajzakonskima partnerjema) višji od prvega, drugega in tretjega kvantila pri družinah tipa 2 in tipa 3. 
+Iz tega lahko sklepamo, da so dohodki omenjenega tipa družin večji od obeh ostalih tipov. Na podoben način lahko sklepamo tudi, da so dohodki v enostarševski družini z očetom v povprečju nekoliko višji od dohodkov enostarševskih družin z materjo. 
+Opazimo tudi, da je varianca dohodkov pri družinah tipa 1 večja od družin preostalih tipov. 
+Osamelcev opazimo največ pri družinah tipa 2, pri družinah tipa 3 pa so podatki najmanj razpršeni. 
+Vredno je omeniti tudi, da je pri družinah tipa 1 in tipa 3 porazdelitev dohodkov nekoliko nagnjena k dohodkov višje vrednosti.
+\newline
+Povzeli bi lahko, da nekoliko izstopajo podatki o družinah tipa 1, ki imajo povprečno najvišji dohodek, a imajo obenem tudi veliko varianco, njihova porazdelitev pa je nagnjena k višjim vrednostim.
+Vseeno moramo biti nekoliko pazljivi, saj je vzorec velikosti $500$ za $33403$ podatkov relativno majhen.
+\newline
+\newline
+Sedaj se osredotočimo na družine tipa 1 in iz podatkov izberimo še štiri enostavne slučajne vzorce. 
+Opažanja so prikazana z vzporednimi škatlami z brki, pri čemer temnejše obarvana škatla z brki pripada podatkom, ki so bili izbrani kot enostavni slučajni vzorec za družine tega tipa iz prejne podnaloge.
 
 \begin{figure}[H]
     \begin{center}
@@ -44,6 +65,33 @@
     \end{center}    
 \end{figure}
 
+Opazimo, da je bil zgoraj izbrani vzorec, kljub temu, da je bil dokaj majhen glede na število vseh podatkov, v veliki meri (vsaj iz vidika ostalih štirih vzorcev) representativen.
+Vidno je namreč, da so vrednosti prvega in tretjega kvartila pri vzorcih dokaj usklajeni. 
+Tudi iz vidika števila osamelcev je prvotno izbran vzorec representativen. 
+Nekoliko se od representativnosti odmaknemo le pri vrednosti drugega kvantila, ki je pri našem vzorcu nekoliko nižje kot pri ostalih, posledično pa so dohodki nekoliko nagnjeni k višjim vrednostim.
+\newline
+\newline
+Zadnje podnaloge se za začetek lotimo nekoliko bolj teoretično, ter šele nato vstavimo podatke za izračun željenih vrednosti. 
+Z $n$ označimo število vseh numeričnim podatkov, t.j. skupni numerus je enak $n$. Podatki so razdeljeni v skupine (glede na tip družine), z $n_i$ označimo število podatkov za skupino s tipom družine $i$ ($i$ seveda tu $1,~2~\text{ali}~3$).
+Definirajmo še uteži za posamezno skupino, kot $w_i = n_i/n$.
+\newline
+Pričakovano vrednost za celoten Kibergrad lahko izrazimo prek pričakovanih vrednosti za posamezne skupine (označimo jih z $\mu_i$) kot:
+$$
+    \mu = w_1 \mu_1 + w_2 \mu_2 + w_3 \mu_3.
+$$
+Če z $\sigma_{i}^2$ označimo varianco znotraj $i$-te skupine, lahko na podoben način varianco dohodka za celoten Kibergrad izrazimo kot:
+$$
+\sigma^2 = \sigma_{P}^2 + \sigma_{N}^2,~~~\text{kjer:}~~\sigma_{P}^2 = \sum_{i=1}^{3}{w_i(\mu_i - \mu)^2}~~~\text{in}~~~\sigma_{N}^2 = \sum_{i=1}^{3}{w_i \sigma_{i}^2}.
+$$
+Izpeljava je navedena v \cite{poj_nepo_var}. V zgornjem zapisu $\sigma_P^2$ označuje s tipom družine pojasnjeno varianco, $\sigma_N^2$ pa nepojasnjeno varianco. Naloga nas sprašuje po obeh. 
+\newline
+Numerično v $python$ datoteki poračunamo približke za pričakovane vrednosti in variance za posamezne skupini, ter po zgoraj zapisanih formulah dobimo, 
+da s tipom družine pojasnjena varianca znaša $113781161.94$, nepojasnjena varianca pa $912604507.95$. Omenimo še, da delež pojasnjene variance ($\eta^2 = \frac{\sigma_{P}^2}{\sigma^2}$) znaša $0.11085$, pojasnjeni standardni odklon pa $10666.83$.
+\newline
+\newline
+Oglejmo si novo pridobljene podatke v luči preteklih opažanj, predvsem iz vidika povprečnih dohodkov različnim tipov družin. Že v komentarju prve podnaloge smo omenili, da so med povprečnimi dohodki tipov družin opazne razlike.  
+Sedaj opazimo, da je tudi vrednost pojasnjenega standardnega odklona visoka glede na povprečne dohodke posameznih tipov družin (te znašajo $47187.48$ za tip 1, $31637.36$ za tip 2 in $20508.19$ za tip 3), kar dodatno nakazuje na razlike med dohodki posameznih tipov družin.
+Vrednost deleža pojasnjene variance le dodatno potrdi že zapisano.
 
 \pagebreak
 
@@ -131,13 +179,48 @@ $$
 Opazimo, da je faktor pred asimptotično srednje kvadratično napako za cenilko, dobljeno po metodi največjega verjetja nekoliko manjši, zato je vsaj asimptotično cenilka $\hat{\theta}_{MNV}$ nekoliko boljša od cenilke $\hat{\theta}_{MM}$.
 
 
+\section{Naloga 3}
+Naloga nam pove, da imamo podane mesečne temperature (torej $12$ podatkov letno) za $n$ zaporednih let (v našem primeru podatki med letoma $1986$ in $2020$, torej $n = 35$).
+Podnaloga a) nam narekuje, da podatke o meritvah zapišemo kot urejene pare, da se bomo lahko problema lotili z enostavno linearno regresijo.
+Opažene meritve so smiselno časovne urejene (leto-mesec), zato si podatke lahko predstavljamo kot pare $(x_i,~y_i)_{i=1,~2,~\dots,~12n}$, kjer $x_i$ predstavlja časovno komponento problema, $y_i$ pa opaženo temperaturo pri časovno $i$-ti meritvi. 
+V resnici lahko le pretvorimo podatek oblike: $(leto,~mesec,~temperatura)$ v par $(leto + mesec/12 - 1986,~temperatura)$ (tu je $-1986$ le zato, ker je to leto našega prvega podatka, lahko bi brez tega).
+Sedaj označimo: 
+$$
+    X = \begin{bmatrix}
+        1 & x_1\\ 
+        1 & x_2 \\
+        \vdots & \vdots\\ 
+        1 & x_{12n}
+    \end{bmatrix}, ~
+    Y = \begin{bmatrix}
+        y_1 \\ 
+        y_2 \\
+        \vdots \\ 
+        y_{12n}
+    \end{bmatrix}~\text{in}~ 
+    \beta = \begin{bmatrix}
+        \beta_0 \\ 
+        \beta_1
+    \end{bmatrix}.   
+$$
+
+V duhu enostavne linearne regresije iščemo $\beta_0$ in $\beta_1$, tako da se bo $X \beta$ po metodi najmanjših kvadratov najbolje prilegal $Y$.
+Teorija nam pove, da lahko $\beta_0$ in $\beta_1$ ocenimo s cenilkama:
+$$
+\begin{aligned}
+& \hat{\beta}_{0}=\frac{\left(\sum_{i=1}^{12n} x_{i}^{2}\right)\left(\sum_{i=1}^{12n} y_{i}\right)-\left(\sum_{i=1}^{12n} x_{i}\right)\left(\sum_{i=1}^{12n} x_{i} y_{i}\right)}{12n \sum_{i=1}^{12n} x_{i}^{2}-\left(\sum_{i=1}^{12n} x_{i}\right)^{2}} \\
+& \hat{\beta}_{1}=\frac{12n \sum_{i=1}^{12n} x_{i} y_{i}-\left(\sum_{i=1}^{12n} x_{i}\right)\left(\sum_{i=1}^{12n} y_{i}\right)}{12n \sum_{i=1}^{12n} x_{i}^{2}-\left(\sum_{i=1}^{12n} x_{i}\right)^{2}}
+\end{aligned}
+$$
+
+
 
 \bibliographystyle{siam}
 \begin{thebibliography}{9}
     \bibitem{clanek}
         E.~Zakrajšek, \emph{Verižnica}, [ogled 30.~6.~2023], dostopno na \url{https://ucilnica.fmf.uni-lj.si/pluginfile.php/8283/mod_resource/conte4/predavanja/veriznica/veriznica.pdf}.
-    \bibitem{zapiski}
-        E. Žagar \emph{Zapiski predavanj 22.3.2021 - Problem diskretne verižnice} [ogled 29.~6.~2023], dostopno na \url{https://ucilnica.fmf.uni-lj.si/pluginfile.php/100122/mod_resource/content/1/mm_uni_22_3_21.pdf}.
+    \bibitem{poj_nepo_var}
+        M. Raič \emph{Zapiski predavanj- Izražava povprečja in variance pri podatkih, organiziranih po skupinah} [ogled 3.~7.~2023], dostopno na \url{https://ucilnica.fmf.uni-lj.si/pluginfile.php/135261/mod_resource/content/2/Razcep_var.pdf}.
 \end{thebibliography}
 
 \end{document}
