--- a/statistika projekt.tex
+++ b/statistika projekt.tex
@@ -46,17 +46,17 @@ Za vsak tip družine izberemo enostaven slučajen vzorec velikosti $500$ in nari
 \end{figure}
 
 Hitro vidimo, da so vrednosti prvega, drugega in tretjega kvantila pri družinah tipa 1 (družinah z zakonskima ali zunajzakonskima partnerjema) višji od prvega, drugega in tretjega kvantila pri družinah tipa 2 in tipa 3. 
-Iz tega lahko sklepamo, da so dohodki omenjenega tipa družin večji od obeh ostalih tipov. Na podoben način lahko sklepamo tudi, da so dohodki v enostarševski družini z očetom v povprečju nekoliko višji od dohodkov enostarševskih družin z materjo. 
-Opazimo tudi, da je varianca dohodkov pri družinah tipa 1 večja od družin preostalih tipov. 
-Osamelcev opazimo največ pri družinah tipa 2, pri družinah tipa 3 pa so podatki najmanj razpršeni. 
+Iz tega lahko sklepamo, da so  povprečju dohodki omenjenega tipa družin večji od obeh ostalih tipov. Na podoben način lahko sklepamo tudi, da so dohodki v enostarševski družini z očetom v povprečju nekoliko višji od dohodkov enostarševskih družin z materjo. 
+Opazimo tudi, da je varianca dohodkov pri družinah tipa 1 večja od variance podatkov o dohodkih družin preostalih tipov. 
+Osamelcev opazimo največ pri družinah tipa 2, podatki pri družinah tipa 3 pa so najmanj razpršeni. 
 Vredno je omeniti tudi, da je pri družinah tipa 1 in tipa 3 porazdelitev dohodkov nekoliko nagnjena k dohodkov višje vrednosti.
 \newline
 Povzeli bi lahko, da nekoliko izstopajo podatki o družinah tipa 1, ki imajo povprečno najvišji dohodek, a imajo obenem tudi veliko varianco, njihova porazdelitev pa je nagnjena k višjim vrednostim.
-Vseeno moramo biti nekoliko pazljivi, saj je vzorec velikosti $500$ za $33403$ podatkov relativno majhen.
+Vseeno moramo biti s sklepanjem nekoliko pazljivi, saj je vzorec velikosti $500$ za $33403$ podatkov relativno majhen.
 \newline
 \newline
 Sedaj se osredotočimo na družine tipa 1 in iz podatkov izberimo še štiri enostavne slučajne vzorce. 
-Opažanja so prikazana z vzporednimi škatlami z brki, pri čemer temnejše obarvana škatla z brki pripada podatkom, ki so bili izbrani kot enostavni slučajni vzorec za družine tega tipa iz prejne podnaloge.
+Opažanja so prikazana z vzporednimi škatlami z brki, pri čemer temnejše obarvana škatla z brki pripada podatkom, ki so bili izbrani kot enostavni slučajni vzorec za družine tega tipa iz prejšne podnaloge.
 
 \begin{figure}[H]
     \begin{center}
@@ -66,13 +66,13 @@ Opažanja so prikazana z vzporednimi škatlami z brki, pri čemer temnejše obar
 \end{figure}
 
 Opazimo, da je bil zgoraj izbrani vzorec, kljub temu, da je bil dokaj majhen glede na število vseh podatkov, v veliki meri (vsaj iz vidika ostalih štirih vzorcev) representativen.
-Vidno je namreč, da so vrednosti prvega in tretjega kvartila pri vzorcih dokaj usklajeni. 
+Vidno je namreč, da so vrednosti prvega in tretjega kvantila pri vzorcih dokaj usklajeni. 
 Tudi iz vidika števila osamelcev je prvotno izbran vzorec representativen. 
-Nekoliko se od representativnosti odmaknemo le pri vrednosti drugega kvantila, ki je pri našem vzorcu nekoliko nižje kot pri ostalih, posledično pa so dohodki nekoliko nagnjeni k višjim vrednostim.
+Nekoliko se od representativnosti odmaknemo le pri vrednosti drugega kvantila, ki je pri našem vzorcu nekoliko nižje kot pri ostalih, posledično pa so podatki o dohodkih prvotno izbranega vzorca nekoliko nagnjeni k višjim vrednostim.
 \newline
 \newline
 Zadnje podnaloge se za začetek lotimo nekoliko bolj teoretično, ter šele nato vstavimo podatke za izračun željenih vrednosti. 
-Z $n$ označimo število vseh numeričnim podatkov, t.j. skupni numerus je enak $n$. Podatki so razdeljeni v skupine (glede na tip družine), z $n_i$ označimo število podatkov za skupino s tipom družine $i$ ($i$ seveda tu $1,~2~\text{ali}~3$).
+Z $n$ označimo število vseh numeričnim podatkov, t.j. skupni numerus je enak $n$. Podatki so razdeljeni v skupine (glede na tip družine), $n_i$ naj označuje število podatkov za skupino s tipom družine $i$ ($i$ seveda tu $1,~2~\text{ali}~3$).
 Definirajmo še uteži za posamezno skupino, kot $w_i = n_i/n$.
 \newline
 Pričakovano vrednost za celoten Kibergrad lahko izrazimo prek pričakovanih vrednosti za posamezne skupine (označimo jih z $\mu_i$) kot:
@@ -90,14 +90,14 @@ da s tipom družine pojasnjena varianca znaša $113781161.94$, nepojasnjena vari
 \newline
 \newline
 Oglejmo si novo pridobljene podatke v luči preteklih opažanj, predvsem iz vidika povprečnih dohodkov različnim tipov družin. Že v komentarju prve podnaloge smo omenili, da so med povprečnimi dohodki tipov družin opazne razlike.  
-Sedaj opazimo, da je tudi vrednost pojasnjenega standardnega odklona visoka glede na povprečne dohodke posameznih tipov družin (te znašajo $47187.48$ za tip 1, $31637.36$ za tip 2 in $20508.19$ za tip 3), kar dodatno nakazuje na razlike med dohodki posameznih tipov družin.
+Sedaj opazimo, da je tudi vrednost pojasnjenega standardnega odklona visoka glede na povprečne dohodke posameznih tipov družin (te znašajo $47187.48$ za tip 1, $31637.36$ za tip 2 in $20508.19$ za tip 3), kar dodatno nakazuje na razlike med povprečnimi dohodki posameznih tipov družin.
 Vrednost deleža pojasnjene variance le dodatno potrdi že zapisano.
 
 \pagebreak
 
 \section{Naloga 2}
 Vredno je zapisati nekoliko bolj matematično interpretacijo problema/navodila. 
-Podatki pripadajo trem različnim eksperimentom, ki bodo določali končne vrednosti in rezultate, a so problemi, ki jih podajajo, teoretično iste narave. 
+Podatki pripadajo trem različnim eksperimentom (podatki so ločeni glede na dolžino opazovanega Kromatina), ki bodo določali končne vrednosti in rezultate, a so problemi, ki jih podajajo, teoretično iste narave. 
 Za podan problem sedaj razvijemo teoretični pristop in se lotimo reševanja podnaloge a) in b). 
 \newline
 Imamo $n$ neodvisnih, enako porazdeljenih slučajnih spremenljivk, označimo jih z $R_1,~R_2,~\dots,~R_n$. 
@@ -137,7 +137,7 @@ Za rešitev podnaloge b) si oglejmo pričakovano vrednost (Rayleighove) slučajn
 $$
 \EX(R) = \int_{0}^{\infty}{r~f(r \mid \theta)~dr}= \int_{0}^{\infty}{\frac{r^2}{\theta^{2}}~\exp\Big(-\frac{r^{2}}{2 \theta^{2}}\Big)~dr}.
 $$
-Uvedemo $\tau = \frac{r^{2}}{2 \theta^{2}}$ in dobimo
+V integral uvedemo $\tau = \frac{r^{2}}{2 \theta^{2}}$ in dobimo
 $$
 \EX(R) = \int_{0}^{\infty}{\sqrt{2 \tau}~\theta ~e^{-\tau}~ d \tau} = \theta \sqrt{2}\int_{0}^{\infty}{\tau^{1/2}~e^{-\tau}~ d \tau} = \theta\sqrt{2}~\Gamma(3/2) = \theta \sqrt{\frac{\pi}{2}}.
 $$
@@ -169,7 +169,7 @@ Velja:
 \begin{equation*}
     \begin{split}
     FI(\theta) = - \EX\bigg(\frac{\partial^2 l(\theta \mid (r_1,~\dots,~r_n))}{\partial \theta^2}\bigg) = -\EX\bigg(\frac{1}{\theta^4}\bigg(2n\theta^2 - 3 \sum_{i=1}^{n}{r_i^2}\bigg)\bigg) = \\
-    = -\EX\bigg(\frac{1}{\theta^4}\bigg(2n \theta^2 - n \EX(R^2)\bigg)\bigg) = -\EX\bigg(\frac{1}{\theta^4}\bigg(2n \theta^2 - 3n \Big(\frac{\pi}{2} \theta^2 + \frac{4- \pi}{2}\theta^2\Big)\bigg)\bigg) = \frac{4n}{\theta^2}, 
+    = -\bigg(\frac{1}{\theta^4}\bigg(2n \theta^2 - 3n \EX(R^2)\bigg)\bigg) = -\EX\bigg(\frac{1}{\theta^4}\bigg(2n \theta^2 - 3n \Big(\frac{\pi}{2} \theta^2 + \frac{4- \pi}{2}\theta^2\Big)\bigg)\bigg) = \frac{4n}{\theta^2}, 
     \end{split}
 \end{equation*}
 oziroma: 
@@ -177,7 +177,83 @@ $$
     FI^{-1}(\theta) = \frac{1}{4}\frac{\theta^2}{n},~\text{zato asimptotično velja:}~~MSE(\hat{\theta}_{MNV}) \approx \frac{\theta^2}{n} \cdot 0{,}25. 
 $$
 Opazimo, da je faktor pred asimptotično srednje kvadratično napako za cenilko, dobljeno po metodi največjega verjetja nekoliko manjši, zato je vsaj asimptotično cenilka $\hat{\theta}_{MNV}$ nekoliko boljša od cenilke $\hat{\theta}_{MM}$.
+\newline
+\newline
+Podnaloga d) nam narekuje oddaljitev od teoretičnih zapisov in izračun številskih ocen. Pomagajmo si z datoteko $statistika\_naloga\_2.py$. 
+Ta nam po obdelavi podatkov za posamezno vrsto Kromatina pove, da številska ocena za $\theta$ po metodi največjega verjetja pri kratkem Kromatinu znaša $1.1238$, pri srednjem Kromatinu znaša $2.0812$, pri dolgem Kromatinu pa $3.4045$.
+Standardno napako lahko sedaj številsko ocenimo s pomočjo številske ocene za $\theta$ (po metodi največjega verjetja). Natančneje, za oceno uporabimo:
+$$
+    \hat{SE}(\hat{\theta}_{MNV}) = \sqrt{\frac{1}{4n}} \cdot\hat{\theta}_{MNV}.
+$$
+Številska ocena za standardno napako tako pri kratkem Kromatinu znaša $0.059735$, pri srednjem Kromatinu $0.065743$, ter pri dolgem Kromatinu $0.148161$.
+Zapisane številske ocene si oglejmo na spodnji sliki. 
+%----------------------------------------------------------------
+\begin{figure}[H]
+    \begin{center}
+    \includegraphics[width=\linewidth]{naloga2d.png}
+    \vspace*{-5mm}\caption{Grafi funkcij verjetja pri različnih vrstah Kromatina}
+    \end{center}    
+\end{figure}
+%----------------------------------------------------------------
+Na sliki so prikazani grafi funkcij verjetja posamezne vrste Kromatina, v odvisnosti od parametra modela $\theta$. Kot je zapisano v legendi, so grafi funkcij verjetja za različne vrste Kromatina različno obarvani. 
+Navpična črtkasta črta pri vsaki vrsti Kromatina povezuje vrednost številske ocene za $\theta$ po metodi največjega verjetja (tiste vrste Kromatina) z vrednostjo funkcije verjetja pri dani številski oceni (točka funkcijske vrednost označena s črno piko).
+Na grafu je dobro vidno tudi analitično ozadje metode največjega verjetja, za vsako vrsto Kromatina namreč grafično opazimo, da ima funkcija verjetja (za tisto vrsto Kromatina) v (oziroma blizu) številski oceni za $\theta$ stacionarno točko. 
+Natančneje, opazimo, da v številski oceni zavzamemo maksimum funkcije verjetja.
+\newline 
+Komentirajmo še pomen velikosti (pri nas ocene) standardne napake. Funkcijo verjetja določajo (za vsako vrsto Kromatina) dani podatki (o tisti vrsti Kromatina), ki obenem v model vnašajo slučaj. 
+Zaradi slučajnosti, ki jih vnašajo podatki, bi radi ocenili napako, ki se pojavi pri določitvi argument maksimuma funkcije verjetja (torej cenilki po metodi največjega verjetja za parameter našega modela, t.j. $\hat{\theta}_{MNV}$).
+Vrednost standardne napake, oziroma v našem primeru njena ocena, nam torej določata velikost intervala okoli naše poračunane ocene za $\theta$ po metodi največjega verjetja. Na sliki je za vsako vrsto Kromatina to tudi označeno s prosojno obarvanim območjem, pri čemer meje intervala dodatno nakazuje vodoravna črtkasta daljica. 
 
+Vredno je omeniti tudi grafično opaženo korelacijo med položnostjo zavzetja maksimuma funkcije verjetja in velikostjo (ocene) standardne napake za pripadajočo vrsto Kromatina.
+Vidno je namreč, da sta številski oceni za standardni napaki kratkega in srednjega Kromatina skoraj enaki, kar se ujema z skoraj enakima širinama$~$"hriba"$~$na vrhu katerega funkcija zavzame maksimum. 
+V primerjavi s kratkim in srednjim Kromatinom, je številska ocena za standardno napako pri dolgem Kromatinu večja. Prav tako hitro vidimo, da pri grafu verjetja za dolgi Kromatin maksimum zavzamemo nekoliko bolj položno oziroma je širini že omenjenega$~$"hriba"$~$vidno večja.
+\newline
+\newline
+Sedaj se lotimo podnaloge e). Že zgoraj omenjena $python$ datoteka nam poda številske ocene tudi za $\theta$ po metodi momentov. 
+Te znašajo $1.1706$ za kratek Kromatin, $2.0748$ za srednji Kromatin in $3.4045$ za dolgi Kromatin.
+Oceno za napako iščemo na podoben način, kot smo to storili pri metodi največjega verjetja. Tokrat bo številska ocena za $\theta$ tista iz metode momentov, faktor pred napako pa ustrezno drugačen. Natančneje, za oceno uporabimo:
+$$
+    \hat{SE}(\hat{\theta}_{MM}) = \sqrt{\frac{4 - \pi}{\pi n}} \cdot\hat{\theta}_{MM}.
+$$
+Številske ocene znašajo $0.06245$ za kratek Kromatin, $0.068731$ za srednji Kromatin in $0.154895$ za dolgi Kromatin.
+\newline
+Opazimo, da so številske vrednosti ocen standardnih napak (za $\theta$ po metodi momentov in po metodi največjega verjetja) pri enaki vrsti Kromatina skoraj enake. 
+Slednje je seveda razumljivo, saj smo za oceno standardne napake vzeli koren asimptotične ocene srednje kvadratične napake, pri čemer smo $\theta$ nadomestili z glede na metodo določeno cenilko. 
+Ker nam metoda največjega verjetja asimptotične daje boljšo cenilko, je tudi ocena za standardno napako, pridobljena prek te metode manjša. 
+Pomen (ocene) standardne napake je enak tistemu, ki smo ga komentirali na začetku obravnave metode največjega verjetja.
+\newline
+\newline
+KOMENTAR STANDARDNE NAPAKE, ZAKAJ JE RELEVANTNA??
+\newline
+\newline
+Podatke znotraj vrste Kromatina sedaj predstavimo še z histogramom. Pri tem določimo širino bloka oziroma število blokov histograma s pomočjo modificiranega Freedman–Diaconisovega pravila. 
+Ta nam prek medkvartilnega razmika določi optimalno širino blokov histograma. Omenjena optimalna širina bloka pri kratkem Kromatinu znaša $0.4685$, za srednji Kromatin $0.7976$, za dolgi Kromatin pa $1.4145$.
+Zapisane vrednosti širine blokov, se glede na razpon podatkov najbolje ujemajo (najbližje naravno število) s $7$ bloki pri kratkem Kromatinu, s $7$ bloki pri srednjem Kromatinu in z $8$ bloki pri dolgem Kromatinu. 
+Za vsako vrsto Kromatina, na pripadajoč histogram (določen s zgoraj zapisanim številom blokov) dorišimo še pripadajoči oceni za gostoti, ki smo jo dobili iz ocene za $\theta$ po metodi momentov in po metodi največjega verjetja. 
+\begin{figure}[H]
+    \begin{center}
+    \includegraphics[width=\linewidth]{naloga2f.png}
+    \vspace*{-5mm}\caption{Histogrami in ocenjene gostote za različne vrste Kromatina}
+    \end{center}    
+\end{figure}
+Kot je to zapisano v legendi, sta gostoti na pripadajočem histogramu dorisani z barvno usklajeno črto, tip katere pa se razlikuje glede na metodo, ki nam je omogočala izračun ocene gostote.
+Vredno je omeniti, da gre za prikaz skaliranih (množiili smo s skupno površino histograma) gostot, saj bomo le na ta način lahko smiselno komentirali prileganje. 
+Sedaj zapišimo nekaj splošnih opazk.
+Pri histogramu za srednji Kromatin opazimo, da se grafa ocen gostot skoraj ujemata, obenem pa se (izmed vseh vrst Kromatina) oceni gostot najbolj prilegata podatkom, predstavljenim s histogramom. 
+Skorajšno prekrivanje ocen gostot na omenjenem grafu, je posledica bližine vrednosti za oceno cenilke obeh metod ($2.0748$ pri metodi momentov,  in $2.0812$ pri metodi največjega verjetja).
+Oceni za gostoti se pri dolgem Kromatinu dokaj dobro ujemata s obliko histograma okoli vrednosti $4$, ter v desnem robu prikaza, drugod pa se obe gostoti minimalno odmakneta od histograma. 
+Nekoliko manj smo lahko navdušeni nad ujemanjem grafov gostot s histogramom pri podatkih kratkega Kromatina. Tu je pomanjkanje ujemanja nekoliko posledica tudi tega, da pri izbiri števila blokov za ta primer število zaokrožimo navzgor.
+Če število blokov za ta primer ročno zmanjšamo za $1$, pridemo do nekoliko lepšega ujemanja, vidnega na spodnji sliki.
+\begin{figure}[H]
+    \begin{center}
+    \includegraphics[width=\linewidth]{naloga2ff.png}
+    \vspace*{-5mm}\caption{Popravljen histogram za kratek Kromatin}
+    \end{center}    
+\end{figure}
+Opazimo, da je tako nekoliko manj neujemanja, moteče je le pomanjkanje podatkov histograma na levem delu grafa, ter zato presežek podatkov na sredini histograma. 
+Kljub temu smo lahko nad ujemanjem gostot (med seboj) in histograma pri vseh vrstah Kromatina zadovoljni in lahko trdimo, da so rezultati razumni.
+
+\pagebreak
 
 \section{Naloga 3}
 Naloga nam pove, da imamo podane mesečne temperature (torej $12$ podatkov letno) za $n$ zaporednih let (v našem primeru podatki med letoma $1986$ in $2020$, torej $n = 35$).
